// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots components|m-datepicker date format invalid 1`] = `
<div>
  <div
    class="m-datepicker m--has-error"
    style="width: 100%; max-width: 136px;"
  >
    <div
      class="m-input-style m--has-error m--has-value m--is-tag-default"
    >
      <div
        class="m-input-style__content"
        style="margin-top: 10px;"
      >
        <!---->
         
        <div
          class="m-input-style__body"
        >
          <div
            class="m-input-style__prefix"
          />
           
          <div
            class="m-input-style__left-content"
          >
            <input
              aria-haspopup="true"
              autocomplete="off"
              id="mDatepicker-uuid"
              placeholder="AAAA-MM-JJ"
            />
              
            <!---->
             
            <!---->
          </div>
           
          <div
            class="m-input-style__right-content"
          >
            <button
              aria-controls="mDatepicker-uuid"
              class="m-icon-button m-datepicker__icon m--is-skin-light m--has-ripple"
              style="width: 22px; height: 22px;"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="m-icon m-icon-button__icon"
                height="20px"
                width="20px"
              >
                <!---->
                 
                <use
                  aria-hidden="true"
                  class=""
                />
              </svg>
               
              <!---->
            </button>
          </div>
           
          <!---->
        </div>
      </div>
    </div>
     
    <div
      class="m-validation-message m-datepicker__validation-message"
    >
      <p
        class="m-validation-message__error"
      >
        <svg
          class="m-icon m-validation-message__icon"
          height="1em"
          width="1em"
        >
          <title>
            Erreur
          </title>
           
          <use
            aria-hidden="true"
            class=""
          />
        </svg>
         
        <span
          class="m-validation-message__text"
        >
          Format invalide
        </span>
      </p>
       
      <!---->
    </div>
     
    <div
      class="m-popup"
    >
      <div
        class="m-popper"
      >
         
        <!---->
      </div>
       
      <!---->
    </div>
  </div>
  model value = 2000-19-12
</div>
`;

exports[`Storyshots components|m-datepicker date off limit  max 1`] = `
<div>
  <div
    class="m-datepicker m--has-error"
    style="width: 100%; max-width: 136px;"
  >
    <div
      class="m-input-style m--has-error m--has-value m--is-tag-default"
    >
      <div
        class="m-input-style__content"
        style="margin-top: 10px;"
      >
        <!---->
         
        <div
          class="m-input-style__body"
        >
          <div
            class="m-input-style__prefix"
          />
           
          <div
            class="m-input-style__left-content"
          >
            <input
              aria-haspopup="true"
              autocomplete="off"
              id="mDatepicker-uuid"
              placeholder="AAAA-MM-JJ"
            />
              
            <!---->
             
            <!---->
          </div>
           
          <div
            class="m-input-style__right-content"
          >
            <button
              aria-controls="mDatepicker-uuid"
              class="m-icon-button m-datepicker__icon m--is-skin-light m--has-ripple"
              style="width: 22px; height: 22px;"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="m-icon m-icon-button__icon"
                height="20px"
                width="20px"
              >
                <!---->
                 
                <use
                  aria-hidden="true"
                  class=""
                />
              </svg>
               
              <!---->
            </button>
          </div>
           
          <!---->
        </div>
      </div>
    </div>
     
    <div
      class="m-validation-message m-datepicker__validation-message"
    >
      <p
        class="m-validation-message__error"
      >
        <svg
          class="m-icon m-validation-message__icon"
          height="1em"
          width="1em"
        >
          <title>
            Erreur
          </title>
           
          <use
            aria-hidden="true"
            class=""
          />
        </svg>
         
        <span
          class="m-validation-message__text"
        >
          Date hors limites
        </span>
      </p>
       
      <!---->
    </div>
     
    <div
      class="m-popup"
    >
      <div
        class="m-popper"
      >
         
        <!---->
      </div>
       
      <!---->
    </div>
  </div>
  model value = 2015-01-01
</div>
`;

exports[`Storyshots components|m-datepicker date off limit min 1`] = `
<div>
  <div
    class="m-datepicker m--has-error"
    style="width: 100%; max-width: 136px;"
  >
    <div
      class="m-input-style m--has-error m--has-value m--is-tag-default"
    >
      <div
        class="m-input-style__content"
        style="margin-top: 10px;"
      >
        <!---->
         
        <div
          class="m-input-style__body"
        >
          <div
            class="m-input-style__prefix"
          />
           
          <div
            class="m-input-style__left-content"
          >
            <input
              aria-haspopup="true"
              autocomplete="off"
              id="mDatepicker-uuid"
              placeholder="AAAA-MM-JJ"
            />
              
            <!---->
             
            <!---->
          </div>
           
          <div
            class="m-input-style__right-content"
          >
            <button
              aria-controls="mDatepicker-uuid"
              class="m-icon-button m-datepicker__icon m--is-skin-light m--has-ripple"
              style="width: 22px; height: 22px;"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="m-icon m-icon-button__icon"
                height="20px"
                width="20px"
              >
                <!---->
                 
                <use
                  aria-hidden="true"
                  class=""
                />
              </svg>
               
              <!---->
            </button>
          </div>
           
          <!---->
        </div>
      </div>
    </div>
     
    <div
      class="m-validation-message m-datepicker__validation-message"
    >
      <p
        class="m-validation-message__error"
      >
        <svg
          class="m-icon m-validation-message__icon"
          height="1em"
          width="1em"
        >
          <title>
            Erreur
          </title>
           
          <use
            aria-hidden="true"
            class=""
          />
        </svg>
         
        <span
          class="m-validation-message__text"
        >
          Date hors limites
        </span>
      </p>
       
      <!---->
    </div>
     
    <div
      class="m-popup"
    >
      <div
        class="m-popper"
      >
         
        <!---->
      </div>
       
      <!---->
    </div>
  </div>
  model value = 2000-01-01
</div>
`;

exports[`Storyshots components|m-datepicker default 1`] = `
<div
  class="m-datepicker"
  style="width: 100%; max-width: 136px;"
>
  <div
    class="m-input-style m--is-tag-default"
  >
    <div
      class="m-input-style__content"
      style="margin-top: 10px;"
    >
      <!---->
       
      <div
        class="m-input-style__body"
      >
        <div
          class="m-input-style__prefix"
        />
         
        <div
          class="m-input-style__left-content"
        >
          <input
            aria-haspopup="true"
            autocomplete="off"
            id="mDatepicker-uuid"
            placeholder="AAAA-MM-JJ"
          />
            
          <!---->
           
          <!---->
        </div>
         
        <div
          class="m-input-style__right-content"
        >
          <button
            aria-controls="mDatepicker-uuid"
            class="m-icon-button m-datepicker__icon m--is-skin-light m--has-ripple"
            style="width: 22px; height: 22px;"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="m-icon m-icon-button__icon"
              height="20px"
              width="20px"
            >
              <!---->
               
              <use
                aria-hidden="true"
                class=""
              />
            </svg>
             
            <!---->
          </button>
        </div>
         
        <!---->
      </div>
    </div>
  </div>
   
  <div
    class="m-validation-message m-datepicker__validation-message"
  >
    <!---->
     
    <!---->
  </div>
   
  <div
    class="m-popup"
  >
    <div
      class="m-popper"
    >
       
      <!---->
    </div>
     
    <!---->
  </div>
</div>
`;

exports[`Storyshots components|m-datepicker disabled 1`] = `
<div
  class="m-datepicker m--is-disabled"
  style="width: 100%; max-width: 136px;"
>
  <div
    class="m-input-style m--is-disabled m--is-tag-default"
  >
    <div
      class="m-input-style__content"
      style="margin-top: 10px;"
    >
      <!---->
       
      <div
        class="m-input-style__body"
      >
        <div
          class="m-input-style__prefix"
        />
         
        <div
          class="m-input-style__left-content"
        >
          <input
            aria-haspopup="true"
            autocomplete="off"
            disabled="disabled"
            id="mDatepicker-uuid"
            placeholder="AAAA-MM-JJ"
          />
            
          <!---->
           
          <!---->
        </div>
         
        <div
          class="m-input-style__right-content"
        >
          <button
            aria-controls="mDatepicker-uuid"
            class="m-icon-button m-datepicker__icon m--is-skin-light m--has-ripple m--is-disabled"
            disabled="disabled"
            style="width: 22px; height: 22px;"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="m-icon m-icon-button__icon"
              height="20px"
              width="20px"
            >
              <!---->
               
              <use
                aria-hidden="true"
                class=""
              />
            </svg>
             
            <!---->
          </button>
        </div>
         
        <!---->
      </div>
    </div>
  </div>
   
  <div
    class="m-validation-message m-datepicker__validation-message"
  >
    <!---->
     
    <!---->
  </div>
   
  <div
    class="m-popup"
  >
    <div
      class="m-popper"
    >
       
      <!---->
    </div>
     
    <!---->
  </div>
</div>
`;

exports[`Storyshots components|m-datepicker error-message 1`] = `
<div
  class="m-datepicker m--has-error m--has-validation-message"
  style="width: 100%; max-width: 136px;"
>
  <div
    class="m-input-style m--has-error m--is-tag-default"
  >
    <div
      class="m-input-style__content"
      style="margin-top: 10px;"
    >
      <!---->
       
      <div
        class="m-input-style__body"
      >
        <div
          class="m-input-style__prefix"
        />
         
        <div
          class="m-input-style__left-content"
        >
          <input
            aria-haspopup="true"
            autocomplete="off"
            id="mDatepicker-uuid"
            placeholder="AAAA-MM-JJ"
          />
            
          <!---->
           
          <!---->
        </div>
         
        <div
          class="m-input-style__right-content"
        >
          <button
            aria-controls="mDatepicker-uuid"
            class="m-icon-button m-datepicker__icon m--is-skin-light m--has-ripple"
            style="width: 22px; height: 22px;"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="m-icon m-icon-button__icon"
              height="20px"
              width="20px"
            >
              <!---->
               
              <use
                aria-hidden="true"
                class=""
              />
            </svg>
             
            <!---->
          </button>
        </div>
         
        <!---->
      </div>
    </div>
  </div>
   
  <div
    class="m-validation-message m-datepicker__validation-message"
  >
    <p
      class="m-validation-message__error"
    >
      <svg
        class="m-icon m-validation-message__icon"
        height="1em"
        width="1em"
      >
        <title>
          Erreur
        </title>
         
        <use
          aria-hidden="true"
          class=""
        />
      </svg>
       
      <span
        class="m-validation-message__text"
      >
        this is an error
      </span>
    </p>
     
    <!---->
  </div>
   
  <div
    class="m-popup"
  >
    <div
      class="m-popper"
    >
       
      <!---->
    </div>
     
    <!---->
  </div>
</div>
`;

exports[`Storyshots components|m-datepicker events 1`] = `
<div>
  <div
    class="m-datepicker"
    style="width: 100%; max-width: 136px;"
  >
    <div
      class="m-input-style m--has-value m--is-tag-default"
    >
      <div
        class="m-input-style__content"
        style="margin-top: 10px;"
      >
        <!---->
         
        <div
          class="m-input-style__body"
        >
          <div
            class="m-input-style__prefix"
          />
           
          <div
            class="m-input-style__left-content"
          >
            <input
              aria-haspopup="true"
              autocomplete="off"
              id="mDatepicker-uuid"
              placeholder="AAAA-MM-JJ"
            />
              
            <!---->
             
            <!---->
          </div>
           
          <div
            class="m-input-style__right-content"
          >
            <button
              aria-controls="mDatepicker-uuid"
              class="m-icon-button m-datepicker__icon m--is-skin-light m--has-ripple"
              style="width: 22px; height: 22px;"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="m-icon m-icon-button__icon"
                height="20px"
                width="20px"
              >
                <!---->
                 
                <use
                  aria-hidden="true"
                  class=""
                />
              </svg>
               
              <!---->
            </button>
          </div>
           
          <!---->
        </div>
      </div>
    </div>
     
    <div
      class="m-validation-message m-datepicker__validation-message"
    >
      <!---->
       
      <!---->
    </div>
     
    <div
      class="m-popup"
    >
      <div
        class="m-popper"
      >
         
        <!---->
      </div>
       
      <!---->
    </div>
  </div>
   
  <br />
  <br />
  model value = 2011-01-01
</div>
`;

exports[`Storyshots components|m-datepicker helper-message 1`] = `
<div
  class="m-datepicker m--has-validation-message"
  style="width: 100%; max-width: 136px;"
>
  <div
    class="m-input-style m--is-tag-default"
  >
    <div
      class="m-input-style__content"
      style="margin-top: 10px;"
    >
      <!---->
       
      <div
        class="m-input-style__body"
      >
        <div
          class="m-input-style__prefix"
        />
         
        <div
          class="m-input-style__left-content"
        >
          <input
            aria-haspopup="true"
            autocomplete="off"
            id="mDatepicker-uuid"
            placeholder="AAAA-MM-JJ"
          />
            
          <!---->
           
          <!---->
        </div>
         
        <div
          class="m-input-style__right-content"
        >
          <button
            aria-controls="mDatepicker-uuid"
            class="m-icon-button m-datepicker__icon m--is-skin-light m--has-ripple"
            style="width: 22px; height: 22px;"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="m-icon m-icon-button__icon"
              height="20px"
              width="20px"
            >
              <!---->
               
              <use
                aria-hidden="true"
                class=""
              />
            </svg>
             
            <!---->
          </button>
        </div>
         
        <!---->
      </div>
    </div>
  </div>
   
  <div
    class="m-validation-message m-datepicker__validation-message"
  >
    <!---->
     
    <p
      class="m-validation-message__helper"
    >
      AAAA-MM-JJ
    </p>
  </div>
   
  <div
    class="m-popup"
  >
    <div
      class="m-popper"
    >
       
      <!---->
    </div>
     
    <!---->
  </div>
</div>
`;

exports[`Storyshots components|m-datepicker hide-internal-error-message 1`] = `
<div
  class="m-datepicker m--has-error"
  style="width: 100%; max-width: 136px;"
>
  <div
    class="m-input-style m--has-error m--has-value m--is-tag-default"
  >
    <div
      class="m-input-style__content"
      style="margin-top: 10px;"
    >
      <!---->
       
      <div
        class="m-input-style__body"
      >
        <div
          class="m-input-style__prefix"
        />
         
        <div
          class="m-input-style__left-content"
        >
          <input
            aria-haspopup="true"
            autocomplete="off"
            id="mDatepicker-uuid"
            placeholder="AAAA-MM-JJ"
          />
            
          <!---->
           
          <!---->
        </div>
         
        <div
          class="m-input-style__right-content"
        >
          <button
            aria-controls="mDatepicker-uuid"
            class="m-icon-button m-datepicker__icon m--is-skin-light m--has-ripple"
            style="width: 22px; height: 22px;"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="m-icon m-icon-button__icon"
              height="20px"
              width="20px"
            >
              <!---->
               
              <use
                aria-hidden="true"
                class=""
              />
            </svg>
             
            <!---->
          </button>
        </div>
         
        <!---->
      </div>
    </div>
  </div>
   
  <div
    class="m-validation-message m-datepicker__validation-message"
  >
    <!---->
     
    <!---->
  </div>
   
  <div
    class="m-popup"
  >
    <div
      class="m-popper"
    >
       
      <!---->
    </div>
     
    <!---->
  </div>
</div>
`;

exports[`Storyshots components|m-datepicker label 1`] = `
<div
  class="m-datepicker"
  style="width: 100%; max-width: 136px;"
>
  <div
    class="m-input-style m--has-label m--is-tag-default"
  >
    <div
      class="m-input-style__content"
      style="margin-top: 10px;"
    >
      <label
        class="m-input-style__label"
        for="mDatepicker-uuid"
      >
        <span
          class="m-input-style__text"
        >
          <span>
            Date label
          </span>
           
          <!---->
        </span>
      </label>
       
      <div
        class="m-input-style__body"
      >
        <!---->
         
        <div
          class="m-input-style__left-content"
        >
          <input
            aria-haspopup="true"
            autocomplete="off"
            id="mDatepicker-uuid"
            placeholder="AAAA-MM-JJ"
          />
            
          <!---->
           
          <!---->
        </div>
         
        <div
          class="m-input-style__right-content"
        >
          <button
            aria-controls="mDatepicker-uuid"
            class="m-icon-button m-datepicker__icon m--is-skin-light m--has-ripple"
            style="width: 22px; height: 22px;"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="m-icon m-icon-button__icon"
              height="20px"
              width="20px"
            >
              <!---->
               
              <use
                aria-hidden="true"
                class=""
              />
            </svg>
             
            <!---->
          </button>
        </div>
         
        <!---->
      </div>
    </div>
  </div>
   
  <div
    class="m-validation-message m-datepicker__validation-message"
  >
    <!---->
     
    <!---->
  </div>
   
  <div
    class="m-popup"
  >
    <div
      class="m-popper"
    >
       
      <!---->
    </div>
     
    <!---->
  </div>
</div>
`;

exports[`Storyshots components|m-datepicker min="2008-01-01" && max="2014-12-31" 1`] = `
<div>
  <div
    class="m-datepicker"
    style="width: 100%; max-width: 136px;"
  >
    <div
      class="m-input-style m--has-value m--is-tag-default"
    >
      <div
        class="m-input-style__content"
        style="margin-top: 10px;"
      >
        <!---->
         
        <div
          class="m-input-style__body"
        >
          <div
            class="m-input-style__prefix"
          />
           
          <div
            class="m-input-style__left-content"
          >
            <input
              aria-haspopup="true"
              autocomplete="off"
              id="mDatepicker-uuid"
              placeholder="AAAA-MM-JJ"
            />
              
            <!---->
             
            <!---->
          </div>
           
          <div
            class="m-input-style__right-content"
          >
            <button
              aria-controls="mDatepicker-uuid"
              class="m-icon-button m-datepicker__icon m--is-skin-light m--has-ripple"
              style="width: 22px; height: 22px;"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="m-icon m-icon-button__icon"
                height="20px"
                width="20px"
              >
                <!---->
                 
                <use
                  aria-hidden="true"
                  class=""
                />
              </svg>
               
              <!---->
            </button>
          </div>
           
          <!---->
        </div>
      </div>
    </div>
     
    <div
      class="m-validation-message m-datepicker__validation-message"
    >
      <!---->
       
      <!---->
    </div>
     
    <div
      class="m-popup"
    >
      <div
        class="m-popper"
      >
         
        <!---->
      </div>
       
      <!---->
    </div>
  </div>
  model value = 2011-01-01
</div>
`;

exports[`Storyshots components|m-datepicker placeholder 1`] = `
<div
  class="m-datepicker"
  style="width: 100%; max-width: 136px;"
>
  <div
    class="m-input-style m--is-tag-default"
  >
    <div
      class="m-input-style__content"
      style="margin-top: 10px;"
    >
      <!---->
       
      <div
        class="m-input-style__body"
      >
        <div
          class="m-input-style__prefix"
        />
         
        <div
          class="m-input-style__left-content"
        >
          <input
            aria-haspopup="true"
            autocomplete="off"
            id="mDatepicker-uuid"
            placeholder="Lorem Ipsum"
          />
            
          <!---->
           
          <!---->
        </div>
         
        <div
          class="m-input-style__right-content"
        >
          <button
            aria-controls="mDatepicker-uuid"
            class="m-icon-button m-datepicker__icon m--is-skin-light m--has-ripple"
            style="width: 22px; height: 22px;"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="m-icon m-icon-button__icon"
              height="20px"
              width="20px"
            >
              <!---->
               
              <use
                aria-hidden="true"
                class=""
              />
            </svg>
             
            <!---->
          </button>
        </div>
         
        <!---->
      </div>
    </div>
  </div>
   
  <div
    class="m-validation-message m-datepicker__validation-message"
  >
    <!---->
     
    <!---->
  </div>
   
  <div
    class="m-popup"
  >
    <div
      class="m-popper"
    >
       
      <!---->
    </div>
     
    <!---->
  </div>
</div>
`;

exports[`Storyshots components|m-datepicker readonly 1`] = `
<div
  class="m-datepicker m--is-readonly"
  style="width: 100%; max-width: 136px;"
>
  <div
    class="m-input-style m--is-readonly m--is-tag-default"
  >
    <div
      class="m-input-style__content"
      style="margin-top: 10px;"
    >
      <!---->
       
      <div
        class="m-input-style__body"
      >
        <div
          class="m-input-style__prefix"
        />
         
        <div
          class="m-input-style__left-content"
        >
          <input
            aria-haspopup="true"
            autocomplete="off"
            id="mDatepicker-uuid"
            placeholder="AAAA-MM-JJ"
            readonly="readonly"
          />
            
          <!---->
           
          <!---->
        </div>
         
        <div
          class="m-input-style__right-content"
        >
          <button
            aria-controls="mDatepicker-uuid"
            class="m-icon-button m-datepicker__icon m--is-skin-light m--has-ripple m--is-disabled"
            disabled="disabled"
            style="width: 22px; height: 22px;"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="m-icon m-icon-button__icon"
              height="20px"
              width="20px"
            >
              <!---->
               
              <use
                aria-hidden="true"
                class=""
              />
            </svg>
             
            <!---->
          </button>
        </div>
         
        <!---->
      </div>
    </div>
  </div>
   
  <div
    class="m-validation-message m-datepicker__validation-message"
  >
    <!---->
     
    <!---->
  </div>
   
  <div
    class="m-popup"
  >
    <div
      class="m-popper"
    >
       
      <!---->
    </div>
     
    <!---->
  </div>
</div>
`;

exports[`Storyshots components|m-datepicker valid 1`] = `
<div
  class="m-datepicker m--is-valid"
  style="width: 100%; max-width: 136px;"
>
  <div
    class="m-input-style m--is-valid m--is-tag-default"
  >
    <div
      class="m-input-style__content"
      style="margin-top: 10px;"
    >
      <!---->
       
      <div
        class="m-input-style__body"
      >
        <div
          class="m-input-style__prefix"
        />
         
        <div
          class="m-input-style__left-content"
        >
          <input
            aria-haspopup="true"
            autocomplete="off"
            id="mDatepicker-uuid"
            placeholder="AAAA-MM-JJ"
          />
            
          <!---->
           
          <!---->
        </div>
         
        <div
          class="m-input-style__right-content"
        >
          <button
            aria-controls="mDatepicker-uuid"
            class="m-icon-button m-datepicker__icon m--is-skin-light m--has-ripple"
            style="width: 22px; height: 22px;"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="m-icon m-icon-button__icon"
              height="20px"
              width="20px"
            >
              <!---->
               
              <use
                aria-hidden="true"
                class=""
              />
            </svg>
             
            <!---->
          </button>
        </div>
         
        <!---->
      </div>
    </div>
  </div>
   
  <div
    class="m-validation-message m-datepicker__validation-message"
  >
    <!---->
     
    <!---->
  </div>
   
  <div
    class="m-popup"
  >
    <div
      class="m-popper"
    >
       
      <!---->
    </div>
     
    <!---->
  </div>
</div>
`;

exports[`Storyshots components|m-datepicker waiting 1`] = `
<div
  class="m-datepicker m--is-waiting"
  style="width: 100%; max-width: 136px;"
>
  <div
    class="m-input-style m--is-waiting m--is-tag-default"
  >
    <div
      class="m-input-style__content"
      style="margin-top: 10px;"
    >
      <!---->
       
      <div
        class="m-input-style__body"
      >
        <div
          class="m-input-style__prefix"
        />
         
        <div
          class="m-input-style__left-content"
        >
          <input
            aria-haspopup="true"
            autocomplete="off"
            disabled="disabled"
            id="mDatepicker-uuid"
            placeholder="AAAA-MM-JJ"
          />
            
          <!---->
           
          <!---->
        </div>
         
        <div
          class="m-input-style__right-content"
        >
          <button
            aria-controls="mDatepicker-uuid"
            class="m-icon-button m-datepicker__icon m--is-skin-light m--has-ripple m--is-disabled"
            disabled="disabled"
            style="width: 22px; height: 22px;"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="m-icon m-icon-button__icon"
              height="20px"
              width="20px"
            >
              <!---->
               
              <use
                aria-hidden="true"
                class=""
              />
            </svg>
             
            <!---->
          </button>
        </div>
         
        <div
          class="m-spinner m-input-style__spinner"
        >
          <!---->
           
          <div />
        </div>
      </div>
    </div>
  </div>
   
  <div
    class="m-validation-message m-datepicker__validation-message"
  >
    <!---->
     
    <!---->
  </div>
   
  <div
    class="m-popup"
  >
    <div
      class="m-popper"
    >
       
      <!---->
    </div>
     
    <!---->
  </div>
</div>
`;
